--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgres:13-alpine
+    image: postgres:16
     container_name: readlog_db
     restart: always
     ports:
