--- a/package.json
+++ b/package.json
@@ -6,24 +6,20 @@
     "scripts": {
         "dev": "nodemon --watch src --exec ts-node src/server.ts",
         "build": "tsc",
-        "start": "node dist/server.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node dist/server.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
+    "packageManager": "pnpm@10.12.4",
     "dependencies": {
         "@prisma/client": "^6.11.1",
-        "dotenv": "^17.2.0",
-        "express": "^5.1.0",
-        "pg": "^8.16.3",
-        "prisma": "^6.11.1",
-        "zod": "^4.0.5"
+        "express": "^5.1.0"
     },
     "devDependencies": {
         "@types/express": "^5.0.3",
         "@types/node": "^24.0.13",
-        "nodemon": "^3.1.10",
+        "prisma": "^6.11.1",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.3"
     }
