--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
         "build": "tsc",
         "start": "node dist/server.js"
     },
+    "prisma": {
+        "seed": "ts-node prisma/seed.ts",
+        "migrate": "npx prisma migrate dev"
+    },
     "keywords": [],
     "author": "",
     "license": "ISC",
@@ -19,6 +23,7 @@
     "devDependencies": {
         "@types/express": "^5.0.3",
         "@types/node": "^24.0.13",
+        "nodemon": "^3.1.10",
         "prisma": "^6.11.1",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.3"
