--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "packageManager": "pnpm@10.12.4",
     "dependencies": {
         "@prisma/client": "^6.11.1",
-        "express": "^5.1.0"
+        "bcryptjs": "^3.0.2",
+        "dotenv": "^17.2.0",
+        "express": "^5.1.0",
+        "jsonwebtoken": "^9.0.2"
     },
     "devDependencies": {
         "@types/express": "^5.0.3",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^24.0.13",
         "nodemon": "^3.1.10",
         "prisma": "^6.11.1",
