--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Simple Node.js + Express + Typescript REST API for tracking books,manga and more.",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon --watch src --exec ts-node src/server.ts",
+        "dev": "nodemon --watch src --exec \"ts-node --files src/server.ts\"",
         "build": "tsc",
         "start": "node dist/server.js"
     },
